--- a/package.json
+++ b/package.json
@@ -16,5 +16,18 @@
   "bugs": {
     "url": "https://github.com/bompoo/bompoo.github.io/issues"
   },
-  "homepage": "https://github.com/bompoo/bompoo.github.io#readme"
+  "homepage": "https://github.com/bompoo/bompoo.github.io#readme",
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.16.1",
+    "@typescript-eslint/parser": "^7.16.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.4",
+    "typescript": "^5.5.3"
+  }
 }
