--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@commitlint/config-conventional": "^19.4.1",
     "@typescript-eslint/eslint-plugin": "^8.3.0",
     "@typescript-eslint/parser": "^8.3.0",
+    "autoprefixer": "^10.4.20",
     "clean-webpack-plugin": "^4.0.0",
     "commitizen": "^4.3.0",
     "commitlint-config-cz": "^0.13.3",
     "conventional-changelog-cli": "^5.0.0",
     "cross-env": "^7.0.3",
+    "css-loader": "^7.1.2",
     "cz-conventional-changelog": "^3.3.0",
     "cz-customizable": "^7.2.1",
     "eslint": "^8.57.0",
@@ -34,7 +36,15 @@
     "html-webpack-plugin": "^5.6.0",
     "husky": "^9.1.5",
     "lint-staged": "^15.2.9",
+    "node-sass": "^9.0.0",
+    "postcss": "^8.4.47",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-loader": "^8.1.1",
+    "postcss-normalize": "^13.0.0",
+    "postcss-preset-env": "^10.0.5",
     "prettier": "^3.3.3",
+    "sass-loader": "^16.0.2",
+    "style-loader": "^4.0.0",
     "stylelint": "^16.9.0",
     "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-rational-order": "^0.1.2",
@@ -71,5 +81,11 @@
     "commitizen": {
       "path": "node_modules/cz-customizable"
     }
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "ie >= 9",
+    "not op_mini all"
+  ]
 }
